2010-02-07  ddegroot

	* [r1216] ChangeLog, Makefile.am: Improved Makefile.am to Detect
	  changes in ChangeLog better

	* [r1215] ., Makefile.am: Updated ChangeLog Generation to only
	  update the ChangeLog when necessary
	  Include ChangeLog Generation in Make all
	  Updated svn:ignore to Exclude ChangeLog in svn commits

2010-02-07  marcelloceschia

	* [r1214] src/chan_sccp.h, src/sccp_pbx.c: adding subscriptionId to
	  linedevice

	* [r1213] src/sccp_device.c: device clean

	* [r1212] src/chan_sccp.h, src/sccp_pbx.c: adding subscriptionId to
	  linedevice

2010-02-05  ddegroot

	* [r1211] ChangeLog, Makefile.am: Fix Makefile.am so it only create
	  doc/html when necessary

	* [r1210] ChangeLog, Makefile.am: Fixed ChangeLog-HTML generation
	  Error when doc/html does not exist yet.

	* [r1209] ChangeLog, Makefile.am, build_tools/svn2html.css: Updated
	  the StyleSheet for ChangeLog to fit better in the Doxygen Pages.
	  Added a title to the ChangeLog HTML File

	* [r1208] ChangeLog, Makefile.am, README,
	  build_tools/svn2html.css[ADD]: Added a style-sheet for the HTML
	  version of the ChangeLog

	* [r1207] ChangeLog, INSTALL, Makefile.am, README.in, configure.ac,
	  doc/main.doc, doc/new_features.doc: - Added a new Makefile.am
	  method to generate ChangeLog files
	  - Added a "make doxygen" method, which updates ChangeLog files
	  and generates the documentation.
	  - SVN2CL is used, when found to generate the ChangeLog files
	  - An HTML version of the ChangeLog is inserted in the main page
	  of the doxygen documentation.
	  - This ChangeLog_SVN2CL.html file has links to the Subversion
	  Repository at sourceforge for easy Revision Lookup.

2010-02-05  davidded

	* [r1206] src/chan_sccp.c, src/sccp_device.c, src/sccp_mwi.c: my
	  latest changes

2010-02-05  ddegroot

	* [r1205] doc/new_features.doc, src/chan_sccp.h, src/sccp_config.h,
	  src/sccp_protocol.h: Added Structure Comments to
	  sccp_protocol.h,chan_sccp.h and sccp_config.h