@@ -1,3 +1,12 @@
+2010-02-08  marcelloceschia
+
+	* [r1218] src/sccp_pbx.c: fixing segmentation fault
+
+2010-02-08  ddegroot
+
+	* [r1217] ChangeLog, doc/new_features.doc: Added documentation
+	  about dynamic SpeedDials to new_features.doc
+
 2010-02-07  ddegroot
 
 	* [r1216] ChangeLog, Makefile.am: Improved Makefile.am to Detect
